--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,22 @@ __pycache__/
 *.log
 .swp
 .DS_Store
+.env
+*.pyo
+*.pyd
+*.so
+.mypy_cache/
+.pytest_cache/
+build/
+dist/
+.eggs/
+*.egg-info/
+.coverage
+.venv/
+.env/
+out/
+*.tgz
+*.zip
+*.jpg
+*.png
+*.mp4
